--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-views": "^5.2.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-register": "^6.24.1",
     "nodemon": "^1.8.1"
   }
