--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2017"],
-  "plugin": ["babel-plugin-transform-async-to-generator"]
+  "plugins": ["babel-plugin-transform-async-to-generator"]
 }
